@@ -1,23 +1,16 @@
 {
-  "timestamp" : "2022-05-08T08:07:14Z",
-  "count_outdated" : 10,
-  "uniques_outdated" : 5,
+  "timestamp" : "2022-05-21T16:04:51Z",
+  "count_outdated" : 15,
+  "uniques_outdated" : 6,
   "count" : 16,
   "uniques" : 7,
   "views" : [
     {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
