@@ -1,3 +1,10 @@
+2022-05-21T16:04:51Z:
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 5 10 / 7 16
+* notice: next accum: outdated-unq outdated-all / unq all: 6 15 / 7 16
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-08T08:07:14Z:
 * notice: last 14d: all unq: 6 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 10 5 / 15 6
